--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@neynar/react": "^1.2.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.84.2",
+    "@upstash/redis": "^1.32.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.5.0",
